--- a/views/templates/register.html
+++ b/views/templates/register.html
@@ -1,6 +1,7 @@
 <h1>WELCOME TO REGISTER PAGE</h1>
 
-<form>
+
+<form method="post" action="/register">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <input type="password" name="confirm_password" placeholder="Confirm Password">
