Add delete book

--- a/views/templates/addbook.html
+++ b/views/templates/addbook.html
@@ -12,8 +12,8 @@ Add the details of the book you wish to add
     <label for="genre">Genre:</label>
     <input type="text" id="genre" name="genre"><br><br>
     
-    <label for="year">Quantity:</label>
-    <input type="text" id="year" name="year"><br><br>
+    <label for="quantity">Quantity:</label>
+    <input type="text" id="quantity" name="quantity"><br><br>
     
     <input type="submit" value="Add Book">
 </form>
