--- a/views/templates/index.html
+++ b/views/templates/index.html
@@ -1,4 +1,72 @@
-<h1>Welcome to Lib-Manager 123</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <style>
+        body{
+          background-color: #252839;
+        }
+        .maincon{
+          width:100%;
+          height:80vh;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+        h2{
+          position: relative;
+          font-size: 1.3in;
+          color:#252839;
+          text-transform: uppercase;
+        }
+        h2::before{
+          content: attr(data-text);
+          position: absolute;
+          top:0;
+          left:0;
+          width:100%;
+          height:100%;
+          color: white;
+          border-right: 2px solid white;
+          overflow: hidden;
+          animation: animate 6s linear infinite;
+        }
 
-<a href="/login">login</a>
-<a href="/register">register</a>
+        @keyframes animate{
+          0%{
+            width:0;
+          }
+          100%{
+            width:100%;
+          }
+        }
+    </style>
+    <title>Home</title>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Login</a>
+              </li>
+            </ul>
+          </div>
+          <div class="right">
+              <a href="/register"><input type="button" value="Register" class="reg"></a>
+          </div>
+        </div>
+    </nav>
+    <div class="maincon">
+          <h2 data-text="LIBMANAGER">LIBMANAGER</h2>
+    </div>
+</body>
+</html>
