--- a/pkg/views/templates/adminupdate.html
+++ b/pkg/views/templates/adminupdate.html
@@ -1,38 +1,96 @@
-<h1>Welcome to hello</h1>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Book List</h1>
-            The selected book is : 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Title</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                        <th>Quantity</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="book in Book">
-                        <td>{{.ID}}</td>
-                        <td>{{.Title}}</td>
-                        <td>{{.Author}}</td>
-                        <td>{{.Genre}}</td>
-                        <td>{{.Quantity}}</td>
-                    </tr>
-                </tbody>
-            </table>
 
-            <form method="post" action="/admin/updatebook">
-                <input type="hidden" ng-model="book.ID" name="id" value={{.ID}} class="form-control" />
-                <input type="text" ng-model="book.Title" name="title" value={{.Title}} class="form-control" />
-                <input type="text" ng-model="book.Author" name="author" value={{.Author}} class="form-control" />
-                <input type="text" ng-model="book.Genre" name="genre" value={{.Genre}} class="form-control" />
-                <button type="submit" class="btn btn-primary">Update</button>
-            </form>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <title>Document</title>
+    <style>
+        .right{
+          background-color: #444969;
+          border: 1px solid #444969;
+        }
+        .item{
+        width:80%;
+        text-align: center;
+        margin-top: 1in;
+      }
+      .b{
+        margin-left: 0.05in;
+        color: white;
+        background-color: red;
+        border-radius: 0.05in;
+      }
+      </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/listbooks">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/addbook">Add</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/deletebook">Delete</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/viewrequest">View Request</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+          </li>
+          <!--
+          <li class="nav-item">
+            <a class="nav-link b" href="/logout">LOG-OUT</a>
+          </li> -->
+        </ul>
+        <div>
+            <input type="button" class="right" value="Admin" disabled>
         </div>
+      </div>
     </div>
-</div>
+  </nav>
+    <center>
+    The selected book is:
+    <table class="table item table-striped">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Genre</th>
+                <th>Quantity</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="book in Book">
+                <td>{{.ID}}</td>
+                <td>{{.Title}}</td>
+                <td>{{.Author}}</td>
+                <td>{{.Genre}}</td>
+                <td>{{.Quantity}}</td>
+            </tr>
+        </tbody>
+      </table>
+      <form method="post" action="/admin/updatebook">
+        <input type="hidden" ng-model="book.ID" name="id" value={{.ID}} class="form-control" />
+        <input type="text" ng-model="book.Title" name="title" value={{.Title}} class="form-control" />
+        <input type="text" ng-model="book.Author" name="author" value={{.Author}} class="form-control" />
+        <input type="text" ng-model="book.Genre" name="genre" value={{.Genre}} class="form-control" />
+        <button type="submit" class="btn btn-primary">Update</button>
+    </form>
+  </center>
+</body>
+</html>
