--- a/pkg/views/templates/deletebook.html
+++ b/pkg/views/templates/deletebook.html
@@ -1,35 +1,93 @@
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Book List</h1>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                        <th>Quantity</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{range .Books}}
-                    <tr ng-repeat="book in books">
-                        <td>{{.Title}}</td>
-                        <td>{{.Author}}</td>
-                        <td>{{.Genre}}</td>
-                        <td>{{.Quantity}}</td>
-                        <td>
-                            <form method="post" action="/admin/deletebook">
-                                <input type="hidden" name="id" value="{{.ID}}">
-                                <input type="submit" value="Delete">
-                            </form>
-                        </td>
-                    </tr>
-                    {{end}}
-                </tbody>
-            </table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <title>Document</title>
+    <style>
+      .right{
+        background-color: #444969;
+        border: 1px solid #444969;
+      }
+      .item{
+        width:80%;
+        text-align: center;
+      }
+      .b{
+        margin-left: 0.05in;
+        color: white;
+        background-color: red;
+        border-radius: 0.05in;
+      }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/listbooks">List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/addbook">Add</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/deletebook">Delete</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+              </li>
+              <!--
+              <li class="nav-item">
+                <a class="nav-link b" href="/logout">LOG-OUT</a>
+              </li> -->
+            </ul>
+            <div>
+                <input type="button" class="right" value="Admin" disabled>
+            </div>
+          </div>
         </div>
-    </div>
-</div>
+      </nav>
+      <center>
+      <table class="table item table-striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Genre</th>
+                <th>Quantity</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {{range .Books}}
+            <tr ng-repeat="book in books">
+                <td>{{.Title}}</td>
+                <td>{{.Author}}</td>
+                <td>{{.Genre}}</td>
+                <td>{{.Quantity}}</td>
+                <td>
+                    <form method="post" action="/admin/deletebook">
+                        <input type="hidden" name="id" value="{{.ID}}">
+                        <button type="submit"> Delete </button>
+                    </form>
+                </td>
+            </tr>
+            {{end}}
+        </tbody>
+      </table>
+
+  </center>
+</body>
+</html>
