--- a/pkg/views/templates/login.html
+++ b/pkg/views/templates/login.html
@@ -1,7 +1,75 @@
-<h1>WELCOME TO LOGIN PAGE</h1>
 
-<form action="/login" method="post">
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Password">
-    <button type="submit">Login</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+    <title>jj</title>
+    <style>
+        body{
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header{
+            display: flex;
+            justify-content: center;
+            font-size: large;
+            margin: 0.5in;
+        }
+        .container{
+            display: flex;
+            justify-content: center;
+            align-items: center;    
+            margin-top: 2in;
+            padding:0.3in;
+            width: max-content;
+            flex-direction: column;
+            border: rgb(0, 0, 0, 0.8) 1px solid;
+            border-radius:0.1in;  
+        }     
+        .container div{
+            margin:0.1in;
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/login">Login</a>
+              </li>
+            </ul>
+          </div>
+          <div class="right">
+              <a href="/register"><input type="button" value="Register" class="reg"></a>
+          </div>
+        </div>
+    </nav>
+    <div class="container">
+        <form action="/login" method="POST">
+            <div>
+                <label for="username">Username:</label>
+                <input type="text" name="username" id="username" required>
+            </div>
+            <div>
+                <label for="password">Password:</label>
+                <input type="password" name="password" id="password" required>
+            </div>
+            <div>
+                <center><button class="btn btn-primary" type="submit">Login</button></center>
+            </div>
+        </form>
+    </div>
+
+</body>
+</html>
