--- a/pkg/views/templates/requestadmin.html
+++ b/pkg/views/templates/requestadmin.html
@@ -31,6 +31,36 @@
     </style>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/listbooks">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/returnbook">Return Book</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
+          </li>
+        </ul>
+        <div>
+          <input type="button" class="right" value="Client" disabled>
+        </div>
+      </div>
+    </div>
+  </nav>
       <center>
     <form action="requestadmin" method="POST">
       <div class="maincon">
