Add error handling

--- a/pkg/views/templates/returnbook.html
+++ b/pkg/views/templates/returnbook.html
@@ -87,5 +87,21 @@
     </tbody>
       </table>  
     </center>
+    {{if .Message}}
+    <div
+      class="alert alert-warning alert-dismissible fade show my-3"
+      role="alert"
+    >
+      {{.Message}}
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {{end}}
 </body>
 </html>
