--- a/pkg/views/templates/addbook.html
+++ b/pkg/views/templates/addbook.html
@@ -74,15 +74,31 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row"><input type="text" name="title" placeholder="Title"></th>
-            <td><input type="text" name="author" placeholder="Author"></td>
-            <td><input type="text" name="genre" placeholder="Genre"></td>
-            <td><input type="text" name="quantity" placeholder="Quantity"></td>
+            <th scope="row"><input type="text" name="title" placeholder="Title" required></th>
+            <td><input type="text" name="author" placeholder="Author" required></td>
+            <td><input type="text" name="genre" placeholder="Genre" required></td>
+            <td><input type="text" name="quantity" placeholder="Quantity" required></td>
           </tr>
         </tbody>
       </table>
     <input type="submit" value="Add Book">
     </form>
+    {{if .Message}}
+    <div
+      class="alert alert-warning alert-dismissible fade show my-3"
+      role="alert"
+    >
+      {{.Message}}
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {{end}}
   </center>
 </body>
 </html>
