--- a/pkg/views/templates/adminlistbooks.html
+++ b/pkg/views/templates/adminlistbooks.html
@@ -89,5 +89,21 @@
         </form>
     </div>
   </center>   
+  {{if .Message}}
+  <div
+    class="alert alert-warning alert-dismissible fade show my-3"
+    role="alert"
+  >
+    {{.Message}}
+    <button
+      type="button"
+      class="close"
+      data-dismiss="alert"
+      aria-label="Close"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {{end}}
 </body>
 </html>
