--- a/pkg/views/templates/adminupdate.html
+++ b/pkg/views/templates/adminupdate.html
@@ -85,12 +85,28 @@
         </tbody>
       </table>
       <form method="post" action="/admin/updatebook">
-        <input type="hidden" ng-model="book.ID" name="id" value={{.ID}} class="form-control" />
-        <input type="text" ng-model="book.Title" name="title" value={{.Title}} class="form-control" />
-        <input type="text" ng-model="book.Author" name="author" value={{.Author}} class="form-control" />
-        <input type="text" ng-model="book.Genre" name="genre" value={{.Genre}} class="form-control" />
+        <input type="hidden" ng-model="book.ID" name="id" value={{.ID}} class="form-control" required/>
+        <input type="text" ng-model="book.Title" name="title" value={{.Title}} class="form-control" required/>
+        <input type="text" ng-model="book.Author" name="author" value={{.Author}} class="form-control" required/>
+        <input type="text" ng-model="book.Genre" name="genre" value={{.Genre}} class="form-control" required/>
         <button type="submit" class="btn btn-primary">Update</button>
     </form>
   </center>
+  {{if .Message}}
+  <div
+    class="alert alert-warning alert-dismissible fade show my-3"
+    role="alert"
+  >
+    {{.Message}}
+    <button
+      type="button"
+      class="close"
+      data-dismiss="alert"
+      aria-label="Close"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {{end}}
 </body>
 </html>
