--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -34,6 +34,18 @@
             margin:0.1in;
         }
     </style>
+    <script>
+        function checkConfPass(){
+            var password = document.getElementById("password");
+            var confirm_password = document.getElementById("confpassword");
+            if(password.value != confirm_password.value) {
+                confpassword.setCustomValidity("Passwords Don't Match");
+            } else {
+                confpassword.setCustomValidity('');
+            }
+        }
+    </script>
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -63,15 +75,34 @@
                 <label for="username">Username:</label>
                 <input type="text" name="username" id="username" required>
             </div>
-            
             <div>
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" required>
             </div>
             <div>
-                <center><button class="btn btn-primary" type="submit">Register</button></center>
+                <label for="password">Confirm Password:</label>
+                <input type="password" name="confpassword" id="confpassword" required>
+            </div>
+            <div>
+                <center><button class="btn btn-primary" type="submit" onclick="checkConfPass()">Register</button></center>
             </div>
         </form>
     </div>
+    {{if .Message}}
+    <div
+      class="alert alert-warning alert-dismissible fade show"
+      role="alert"
+    >
+      {{.Message}}
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {{end}}
 </body>
 </html>
