--- a/pkg/views/templates/requestadmin.html
+++ b/pkg/views/templates/requestadmin.html
@@ -69,5 +69,21 @@
       </div>
     </form>
   </center>
+  {{if .Message}}
+  <div
+    class="alert alert-warning alert-dismissible fade show my-3"
+    role="alert"
+  >
+    {{.Message}}
+    <button
+      type="button"
+      class="close"
+      data-dismiss="alert"
+      aria-label="Close"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {{end}}
 </body>
 </html>
