--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -88,12 +88,13 @@
             </div>
         </form>
     </div>
-    {{if .Message}}
+
+    {{if .Message.Message}}
     <div
-      class="alert alert-warning alert-dismissible fade show"
+      class="alert alert-warning alert-dismissible fade show my-3"
       role="alert"
     >
-      {{.Message}}
+      {{.Message.Message}}
       <button
         type="button"
         class="close"
