--- a/pkg/views/templates/addbook.html
+++ b/pkg/views/templates/addbook.html
@@ -28,7 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -83,12 +83,13 @@
       </table>
     <input type="submit" value="Add Book">
     </form>
-    {{if .Message}}
+
+    {{if .Message.Message}}
     <div
       class="alert alert-warning alert-dismissible fade show my-3"
       role="alert"
     >
-      {{.Message}}
+      {{.Message.Message}}
       <button
         type="button"
         class="close"
