--- a/pkg/views/templates/adminhome.html
+++ b/pkg/views/templates/adminhome.html
@@ -34,7 +34,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
