--- a/pkg/views/templates/borrowhistory.html
+++ b/pkg/views/templates/borrowhistory.html
@@ -30,7 +30,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/user/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -69,7 +69,7 @@
             </tr>
         </thead>
       <tbody>
-        {{range .BorrowHistory}}
+        {{range .Results.BorrowHistory}}
         <tr ng-repeat="book in books">
             <td>{{.Title}}</td>
             <td>{{.Author}}</td>
