--- a/pkg/views/templates/deletebook.html
+++ b/pkg/views/templates/deletebook.html
@@ -27,7 +27,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -71,7 +71,7 @@
             </tr>
         </thead>
         <tbody>
-            {{range .Books}}
+            {{range .Results.Books}}
             <tr ng-repeat="book in books">
                 <td>{{.Title}}</td>
                 <td>{{.Author}}</td>
@@ -89,12 +89,13 @@
       </table>
 
   </center>
-  {{if .Message}}
+
+  {{if .Message.Message}}
   <div
     class="alert alert-warning alert-dismissible fade show my-3"
     role="alert"
   >
-    {{.Message}}
+    {{.Message.Message}}
     <button
       type="button"
       class="close"
