--- a/pkg/views/templates/grantadmin.html
+++ b/pkg/views/templates/grantadmin.html
@@ -35,7 +35,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -78,14 +78,14 @@
         </thead>
 
         <tbody>
-            {{range .Users}}
+            {{range .Results.Users}}
             <tr ng-repeat="book in books">
                 <td>{{.Userid}}</td>
                 <td>{{.Username}}</td>
                 <td>
                     <form method="POST" action="/admin/grantadmin">
-                        <input type="hidden" name="userid" value="{{.Userid}}">
-                        <input type="hidden" name="username" value="{{.Username}}">
+                        <input type="hidden" name="userid" value="{{.Results.Userid}}">
+                        <input type="hidden" name="username" value="{{.Results.Username}}">
                         <button type="submit" class="btn btn-primary">Approve</button>
                     </form>
                 </td>
@@ -94,12 +94,13 @@
         </tbody>
       </table>
       </center>
-      {{if .Message}}
+
+      {{if .Message.Message}}
       <div
         class="alert alert-warning alert-dismissible fade show my-3"
         role="alert"
       >
-        {{.Message}}
+        {{.Message.Message}}
         <button
           type="button"
           class="close"
