--- a/pkg/views/templates/listbooks.html
+++ b/pkg/views/templates/listbooks.html
@@ -27,7 +27,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/user/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -66,7 +66,7 @@
             </tr>
         </thead>
       <tbody>
-        {{range .Books}}
+        {{range .Results.Books}}
         <tr ng-repeat="book in books">
             <td>{{.Title}}</td>
             <td>{{.Author}}</td>
