--- a/pkg/views/templates/requestadmin.html
+++ b/pkg/views/templates/requestadmin.html
@@ -33,7 +33,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Lib-Manager</a>
+      <a class="navbar-brand" href="/user/home">Lib-Manager</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -69,12 +69,13 @@
       </div>
     </form>
   </center>
-  {{if .Message}}
+
+  {{if .Message.Message}}
   <div
     class="alert alert-warning alert-dismissible fade show my-3"
     role="alert"
   >
-    {{.Message}}
+    {{.Message.Message}}
     <button
       type="button"
       class="close"
