--- a/pkg/views/templates/returnbook.html
+++ b/pkg/views/templates/returnbook.html
@@ -28,7 +28,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Lib-Manager</a>
+      <a class="navbar-brand" href="/user/home">Lib-Manager</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -69,7 +69,7 @@
             </tr>
         </thead>
       <tbody>
-        {{range .BorrowHistory}}
+        {{range .Results.BorrowHistory}}
         <tr ng-repeat="book in books">
             <td>{{.Title}}</td>
             <td>{{.Author}}</td>
@@ -77,7 +77,7 @@
             <td>{{.RequestDate}}</td>
             <td>{{.AcceptDate}}</td>
             <td>
-                <form>
+                <form method="POST" action="/user/returnbook">
                     <input type="hidden" name="bookid" value="{{.BookId}}">
                     <button type="submit"> Return </button>
                 </form>
@@ -87,12 +87,13 @@
     </tbody>
       </table>  
     </center>
-    {{if .Message}}
+
+    {{if .Message.Message}}
     <div
       class="alert alert-warning alert-dismissible fade show my-3"
       role="alert"
     >
-      {{.Message}}
+      {{.Message.Message}}
       <button
         type="button"
         class="close"
