--- a/pkg/views/templates/viewrequest.html
+++ b/pkg/views/templates/viewrequest.html
@@ -34,7 +34,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
+          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -80,7 +80,7 @@
             </tr>
         </thead>
         <tbody>
-            {{range .BorrowHistory}}
+            {{range .Results.BorrowHistory}}
             <tr ng-repeat="book in books">
                 <td>{{.UserID}}</td>
                 <td>{{.Username}}</td>
@@ -100,5 +100,21 @@
         </tbody>
         </table>
       </center>
+      {{if .Message.Message}}
+      <div
+        class="alert alert-warning alert-dismissible fade show my-3"
+        role="alert"
+      >
+        {{.Message.Message}}
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {{end}}
 </body>
 </html>
