--- a/pkg/views/templates/grantadmin.html
+++ b/pkg/views/templates/grantadmin.html
@@ -23,6 +23,9 @@
         background-color: red;
         border-radius: 0.05in;
       }
+      .navbar{
+        height: 10vh;
+      }
       .deny{
         background-color: red;
       }
