--- a/pkg/views/templates/index.html
+++ b/pkg/views/templates/index.html
@@ -34,7 +34,9 @@
           overflow: hidden;
           animation: animate 6s linear infinite;
         }
-
+        .navbar{
+        height: 10vh;
+      }
         @keyframes animate{
           0%{
             width:0;
