--- a/pkg/views/templates/login.html
+++ b/pkg/views/templates/login.html
@@ -34,6 +34,9 @@
         .container div{
             margin:0.1in;
         }
+        .navbar{
+        height: 10vh;
+      }
     </style>
 </head>
 <body>
