--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -33,6 +33,9 @@
         .container div{
             margin:0.1in;
         }
+        .navbar{
+        height: 10vh;
+      }
     </style>
     <script>
         function checkConfPass(){
