--- a/pkg/views/templates/reqcheckout.html
+++ b/pkg/views/templates/reqcheckout.html
@@ -21,6 +21,9 @@
         background-color: red;
         border-radius: 0.05in;
       }
+      .navbar{
+        height: 10vh;
+      }
     </style>
 </head>
 <body>
