--- a/pkg/views/templates/viewrequest.html
+++ b/pkg/views/templates/viewrequest.html
@@ -22,8 +22,8 @@
         background-color: red;
         border-radius: 0.05in;
       }
-      .deny{
-        background-color: red;
+      .navbar{
+        height: 10vh;
       }
       .make{
         margin-right:5px; 
