--- a/pkg/views/templates/adminhome.html
+++ b/pkg/views/templates/adminhome.html
@@ -29,6 +29,9 @@
         background-color: red;
         border-radius: 0.05in;
       }
+      .navbar{
+        height: 10vh;
+      }
     </style>
 </head>
 <body>
