--- a/pkg/views/templates/adminupdate.html
+++ b/pkg/views/templates/adminupdate.html
@@ -25,6 +25,9 @@
         background-color: red;
         border-radius: 0.05in;
       }
+      .navbar{
+        height: 10vh;
+      }
       </style>
 </head>
 <body>
