--- a/pkg/views/templates/returnbook.html
+++ b/pkg/views/templates/returnbook.html
@@ -22,6 +22,9 @@
         background-color: red;
         border-radius: 0.05in;
       }
+      .navbar{
+        height: 10vh;
+      }
     </style>
 
 </head>
