Fix CSS issues and Minor Issues

--- a/pkg/views/templates/adminhome.html
+++ b/pkg/views/templates/adminhome.html
@@ -53,15 +53,14 @@
                 <a class="nav-link" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+                <a class="nav-link" href="/admin/grantadmin">Admins Requests</a>
               </li>
-              <!--
               <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li> -->
+                <a class="nav-link b" href="/login">LOG-OUT</a>
+              </li>
             </ul>
             <div>
                 <input type="button" class="right" value="Admin" disabled>
