--- a/pkg/views/templates/home.html
+++ b/pkg/views/templates/home.html
@@ -58,6 +58,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link b" href="/login">LOG-OUT</a>
+              </li>
             </ul>
             <div>
               <input type="button" class="right" value="Client" disabled>
