--- a/pkg/views/templates/reqcheckout.html
+++ b/pkg/views/templates/reqcheckout.html
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/user/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/user/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/user/listbooks">List</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
+                <a class="nav-link active" href="/user/reqcheckout">Request for Checkout</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
@@ -49,6 +49,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link b" href="/login">LOG-OUT</a>
               </li>
             </ul>
             <div>
