--- a/pkg/views/templates/addbook.html
+++ b/pkg/views/templates/addbook.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
+    <script src="/public/checks.js"></script>
     <style>
       .right{
         background-color: #444969;
@@ -35,27 +33,26 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/listbooks">List</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/addbook">Add</a>
+                <a class="nav-link active" href="/admin/addbook">Add</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+                <a class="nav-link" href="/admin/grantadmin">Admin Requests</a>
               </li>
-              <!--
               <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li> -->
+                <a class="nav-link b" href="/login">LOG-OUT</a>
+              </li>
             </ul>
             <div>
                 <input type="button" class="right" value="Admin" disabled>
@@ -65,28 +62,27 @@
       </nav>
       <center>
         <form method="post" action="/admin/addbook">
-      Give the details of the book you want to add
-      <table class="table item table-striped">
-        <thead>
-          <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Author</th>
-            <th scope="col">Genre</th>
-            <th scope="col">Quantity</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row"><input type="text" name="title" placeholder="Title" required></th>
-            <td><input type="text" name="author" placeholder="Author" required></td>
-            <td><input type="text" name="genre" placeholder="Genre" required></td>
-            <td><input type="text" name="quantity" placeholder="Quantity" required></td>
-          </tr>
-        </tbody>
-      </table>
-    <input type="submit" value="Add Book">
-    </form>
-
+          Give the details of the book you want to add
+          <table class="table item table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Title</th>
+                <th scope="col">Author</th>
+                <th scope="col">Genre</th>
+                <th scope="col">Quantity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"><input type="text" name="title" placeholder="Title" required></th>
+                <td><input type="text" name="author" placeholder="Author" required></td>
+                <td><input type="text" name="genre" placeholder="Genre" required></td>
+                <td><input type="text" id="quantity" name="quantity" placeholder="Quantity" required></td>
+              </tr>
+            </tbody>
+          </table>
+          <button type="submit" onclick="checkquant()">Add Book</button>
+      </form>
     {{if .Message.Message}}
     <div
       class="alert alert-warning alert-dismissible fade show my-3"
