--- a/pkg/views/templates/adminlistbooks.html
+++ b/pkg/views/templates/adminlistbooks.html
@@ -34,10 +34,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/listbooks">List</a>
+                <a class="nav-link active" href="/admin/listbooks">List</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/addbook">Add</a>
@@ -46,15 +46,14 @@
                 <a class="nav-link" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+                <a class="nav-link" href="/admin/grantadmin">Admins Requests</a>
               </li>
-              <!--
               <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li> -->
+                <a class="nav-link b" href="/login">LOG-OUT</a>
+              </li>
             </ul>
             <div>
                 <input type="button" class="right" value="Admin" disabled>
@@ -71,6 +70,7 @@
                 <th>Author</th>
                 <th>Genre</th>
                 <th>Quantity</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -81,16 +81,17 @@
                 <td>{{.Author}}</td>
                 <td>{{.Genre}}</td>
                 <td>{{.Quantity}}</td>
+                <td>
+                    <form action="/admin/listbooks" method="post">
+                        <input type="hidden" name="id" value="{{.ID}}">
+                        <button type="submit" class="btn btn-primary">Edit</button>
+                    </form>
+                </td>
             </tr>
             {{end}}
         </tbody>
     </table>
-    <div>
-        <form action="/admin/listbooks" method="post">
-            Enter the ID of the book you want to edit: <input type="text" name="id" ng-model="bookID">
-            <button type="submit" class="btn btn-primary">Edit Book</button>
-        </form>
-    </div>
+
   </center>   
 
   {{if .Message.Message}}
