--- a/pkg/views/templates/deletebook.html
+++ b/pkg/views/templates/deletebook.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/listbooks">List</a>
@@ -43,18 +43,18 @@
                 <a class="nav-link" href="/admin/addbook">Add</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/deletebook">Delete</a>
+                <a class="nav-link active" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+                <a class="nav-link" href="/admin/grantadmin">Admin Requests</a>
               </li>
-              <!--
+              
               <li class="nav-item">
                 <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li> -->
+              </li>
             </ul>
             <div>
                 <input type="button" class="right" value="Admin" disabled>
