--- a/pkg/views/templates/grantadmin.html
+++ b/pkg/views/templates/grantadmin.html
@@ -42,7 +42,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/admin/home">Home</a>
+                <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/listbooks">List</a>
@@ -54,15 +54,14 @@
                 <a class="nav-link" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">View Request</a>
+                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/grantadmin">Add Admins</a>
+                <a class="nav-link active" href="/admin/grantadmin">Admin Requests</a>
               </li>
-              <!--
               <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li> -->
+                <a class="nav-link b" href="/login">LOG-OUT</a>
+              </li>
             </ul>
             <div>
                 <input type="button" class="right" value="Admin" disabled>
@@ -87,8 +86,8 @@
                 <td>{{.Username}}</td>
                 <td>
                     <form method="POST" action="/admin/grantadmin">
-                        <input type="hidden" name="userid" value="{{.Results.Userid}}">
-                        <input type="hidden" name="username" value="{{.Results.Username}}">
+                        <input type="hidden" name="userid" value="{{.Userid}}">
+                        <input type="hidden" name="username" value="{{.Username}}">
                         <button type="submit" class="btn btn-primary">Approve</button>
                     </form>
                 </td>
