--- a/pkg/views/templates/login.html
+++ b/pkg/views/templates/login.html
@@ -4,40 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/login.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>jj</title>
-    <style>
-        body{
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header{
-            display: flex;
-            justify-content: center;
-            font-size: large;
-            margin: 0.5in;
-        }
-        .container{
-            display: flex;
-            justify-content: center;
-            align-items: center;    
-            margin-top: 2in;
-            padding:0.3in;
-            width: max-content;
-            flex-direction: column;
-            border: rgb(0, 0, 0, 0.8) 1px solid;
-            border-radius:0.1in;  
-        }     
-        .container div{
-            margin:0.1in;
-        }
-        .navbar{
-        height: 10vh;
-      }
-    </style>
+    <title>Login Page</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -58,20 +29,35 @@
           </div>
         </div>
     </nav>
-    <div class="container">
-        <form action="/login" method="POST">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username" required>
+
+    <div class="no">
+      <form action="/login" method="POST">
+
+          <div data-mdb-input-init class="form-outline mb-4">
+            <input id="username" name="username" class="form-control" />
+            <label class="form-label" for="username">Username</label>
+          </div>
+  
+          <div data-mdb-input-init class="form-outline mb-4">
+            <input type="password" id="password" name="password" class="form-control" />
+            <label class="form-label" for="password">Password</label>
+          </div>
+
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="remember" checked />
+              <label class="form-check-label" for="remember"> Remember me </label>
             </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div>
-                <center><button class="btn btn-primary" type="submit">Login</button></center>
-            </div>
-        </form>
+          </div>
+        </div>
+
+        <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">Login</button>
+
+        <div class="text-center">
+          <p>Not a User? <a href="/register">Register</a></p>
+        </div>
+      </form>
     </div>
 
     {{if .Message.Message}}
@@ -90,6 +76,6 @@
       </button>
     </div>
     {{end}}
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js" defer></script>
 </body>
 </html>
