--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -3,52 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Register</title>
-    <style>
-        body{
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header{
-            display: flex;
-            justify-content: center;
-            font-size: large;
-            margin: 0.5in;
-        }
-        .container{
-            display: flex;
-            justify-content: center;
-            align-items: center;    
-            margin-top: 2in;
-            padding:0.3in;
-            width: max-content;
-            flex-direction: column;
-            border: rgb(0, 0, 0, 0.8) 1px solid;
-            border-radius:0.1in;  
-        }     
-        .container div{
-            margin:0.1in;
-        }
-        .navbar{
-        height: 10vh;
-      }
-    </style>
-    <script>
-        function checkConfPass(){
-            var password = document.getElementById("password");
-            var confirm_password = document.getElementById("confpassword");
-            if(password.value != confirm_password.value) {
-                confpassword.setCustomValidity("Passwords Don't Match");
-            } else {
-                confpassword.setCustomValidity('');
-            }
-        }
-    </script>
-
+    <link rel="stylesheet" href="/public/register.css">
+    <script src="/public/checks.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -74,22 +34,26 @@
     </center>
     <div class="container">
         <form action="/register" method="POST">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" name="username" id="username" required>
-            </div>
-            <div>
-                <label for="password">Password:</label>
-                <input type="password" name="password" id="password" required>
-            </div>
-            <div>
-                <label for="password">Confirm Password:</label>
-                <input type="password" name="confpassword" id="confpassword" required>
-            </div>
-            <div>
-                <center><button class="btn btn-primary" type="submit" onclick="checkConfPass()">Register</button></center>
-            </div>
+      
+          <div data-mdb-input-init class="form-outline mb-4">
+            <input id="username" name="username" class="form-control" />
+            <label class="form-label" for="username">Username</label>
+          </div>
+  
+          <div data-mdb-input-init class="form-outline mb-4">
+            <input type="password" id="password" name="password" class="form-control" />
+            <label class="form-label" for="password">Password</label>
+          </div>
+
+          <div data-mdb-input-init class="form-outline mb-4">
+            <input type="password" name="confpassword" id="confpassword" class="form-control" required/>
+            <label class="form-label" for="confpassword">Confirm Password: </label>
+          </div>
+
+          <button data-mdb-ripple-init type="submit" onclick="minPasswordLength()" class="btn btn-primary btn-block mb-4">Register</button>
+        
         </form>
+
     </div>
 
     {{if .Message.Message}}
@@ -108,5 +72,6 @@
       </button>
     </div>
     {{end}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js" defer></script>
 </body>
 </html>
