--- a/pkg/views/templates/returnbook.html
+++ b/pkg/views/templates/returnbook.html
@@ -35,7 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/user/home">Home</a>
+            <a class="nav-link" aria-current="page" href="/user/home">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/user/listbooks">List</a>
@@ -47,10 +47,13 @@
             <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/returnbook">Return Book</a>
+            <a class="nav-link active" href="/user/returnbook">Return Book</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link b" href="/login">LOG-OUT</a>
           </li>
         </ul>
         <div>
