--- a/pkg/views/templates/home.html
+++ b/pkg/views/templates/home.html
@@ -8,10 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Document</title>
     <style>
-      .right{
-        background-color: #444969;
-        border: 1px solid #444969;
-      }
+
       body{
         background-color: #252839;
       }
@@ -23,15 +20,7 @@
       flex-direction: column;
       margin-top: 20%;
       }
-      .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
+
     </style>
 </head>
 <body>
@@ -59,7 +48,7 @@
                 <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link b" href="/login">LOG-OUT</a>
+                <a class="nav-link b" href="/logout">LOG-OUT</a>
               </li>
             </ul>
             <div>
