--- a/pkg/views/templates/addbook.html
+++ b/pkg/views/templates/addbook.html
@@ -6,25 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script src="/public/checks.js"></script>
-    <style>
-      .right{
-        background-color: #444969;
-        border: 1px solid #444969;
-      }
-      .item{
-        width:80%;
-        text-align: center;
-      }
-      .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
-    </style>
+    <link rel="stylesheet" href="/public/major.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -51,7 +33,7 @@
                 <a class="nav-link" href="/admin/grantadmin">Admin Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link b" href="/login">LOG-OUT</a>
+                <a class="nav-link b" href="/logout">LOG-OUT</a>
               </li>
             </ul>
             <div>
@@ -83,22 +65,11 @@
           </table>
           <button type="submit" onclick="checkquant()">Add Book</button>
       </form>
-    {{if .Message.Message}}
-    <div
-      class="alert alert-warning alert-dismissible fade show my-3"
-      role="alert"
-    >
-      {{.Message.Message}}
-      <button
-        type="button"
-        class="close"
-        data-dismiss="alert"
-        aria-label="Close"
-      >
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {{end}}
+      {{if .Message.Message}}
+      <div style="color:red">
+        {{.Message.Message}}
+      </div>
+      {{end}}
   </center>
 </body>
 </html>
