--- a/pkg/views/templates/deletebook.html
+++ b/pkg/views/templates/deletebook.html
@@ -7,25 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Document</title>
-    <style>
-      .right{
-        background-color: #444969;
-        border: 1px solid #444969;
-      }
-      .item{
-        width:80%;
-        text-align: center;
-      }
-      .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
-    </style>
+    <link rel="stylesheet" href="/public/major.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -83,7 +65,7 @@
                 <td>
                     <form method="post" action="/admin/deletebook">
                         <input type="hidden" name="id" value="{{.ID}}">
-                        <button type="submit"> Delete </button>
+                        <button type="submit" class="btn btn-danger"> Delete </button>
                     </form>
                 </td>
             </tr>
@@ -91,23 +73,11 @@
         </tbody>
       </table>
 
-  </center>
-
-  {{if .Message.Message}}
-  <div
-    class="alert alert-warning alert-dismissible fade show my-3"
-    role="alert"
-  >
-    {{.Message.Message}}
-    <button
-      type="button"
-      class="close"
-      data-dismiss="alert"
-      aria-label="Close"
-    >
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {{end}}
+      {{if .Message.Message}}
+      <div style="color:red">
+        {{.Message.Message}}
+      </div>
+      {{end}}
+    </center>
 </body>
 </html>
