--- a/pkg/views/templates/grantadmin.html
+++ b/pkg/views/templates/grantadmin.html
@@ -8,32 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Document</title>
-    <style>
-      .right{
-        background-color: #444969;
-        border: 1px solid #444969;
-      }
-      .item{
-        width:80%;
-        text-align: center;
-      }
-      .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
-      .deny{
-        background-color: red;
-      }
-      .make{
-        margin-right:5px; 
-        background-color: green;
-      }
-    </style>
+    <link rel="stylesheet" href="/public/major.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -60,7 +35,7 @@
                 <a class="nav-link active" href="/admin/grantadmin">Admin Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link b" href="/login">LOG-OUT</a>
+                <a class="nav-link b" href="/logout">LOG-OUT</a>
               </li>
             </ul>
             <div>
@@ -88,30 +63,19 @@
                     <form method="POST" action="/admin/grantadmin">
                         <input type="hidden" name="userid" value="{{.Userid}}">
                         <input type="hidden" name="username" value="{{.Username}}">
-                        <button type="submit" class="btn btn-primary">Approve</button>
+                        <button type="submit" class="btn btn-success" name="choice" value="approve">Approve</button>
+                        <button type="submit" class="btn btn-danger" name="choice" value="deny">Deny</button>
                     </form>
                 </td>
             </tr>
             {{end}}
         </tbody>
       </table>
-      </center>
-
       {{if .Message.Message}}
-      <div
-        class="alert alert-warning alert-dismissible fade show my-3"
-        role="alert"
-      >
+      <div style="color:red">
         {{.Message.Message}}
-        <button
-          type="button"
-          class="close"
-          data-dismiss="alert"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
       {{end}}
+    </center>
 </body>
 </html>
