--- a/pkg/views/templates/listbooks.html
+++ b/pkg/views/templates/listbooks.html
@@ -7,25 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Document</title>
-    <style>
-      .right{
-        background-color: #444969;
-        border: 1px solid #444969;
-      }
-      .item{
-        width:80%;
-        text-align: center;
-      }
-      .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
-    </style>
+    <link rel="stylesheet" href="/public/major.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -52,7 +34,7 @@
                 <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link b" href="/login">LOG-OUT</a>
+                <a class="nav-link b" href="/logout">LOG-OUT</a>
               </li>
             </ul>
             <div>
