--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Register</title>
-    <link rel="stylesheet" href="/public/register.css">
+    <link rel="stylesheet" href="/public/major.css">
     <script src="/public/checks.js"></script>
 </head>
 <body>
@@ -56,22 +56,13 @@
 
     </div>
 
-    {{if .Message.Message}}
-    <div
-      class="alert alert-warning alert-dismissible fade show my-3"
-      role="alert"
-    >
-      {{.Message.Message}}
-      <button
-        type="button"
-        class="close"
-        data-dismiss="alert"
-        aria-label="Close"
-      >
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {{end}}
+    <center>
+      {{if .Message.Message}}
+      <div style="color:red">
+        {{.Message.Message}}
+      </div>
+      {{end}}
+    </center>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js" defer></script>
 </body>
 </html>
