--- a/pkg/views/templates/requestadmin.html
+++ b/pkg/views/templates/requestadmin.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
-    <style>
-        .right{
-          background-color: #444969;
-          border: 1px solid #444969;
-        }
-        .maincon{
-          margin-top: 20%;
-          display: flex;
-          flex-direction:column;
-          justify-content: center;
-          align-items: center;
-          width: 25vw;
-          height: 10vh;
-          border: 1px solid rgb(0, 0, 0, 0.7);
-          border-radius: 0.1in;
-        } 
-        .b{
-        margin-left: 0.05in;
-        color: white;
-        background-color: red;
-        border-radius: 0.05in;
-      }
-      .navbar{
-        height: 10vh;
-      }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/major.css">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
@@ -58,7 +38,7 @@
             <a class="nav-link active" href="/user/requestadmin">Request for Admin Privileges</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link b" href="/login">LOG-OUT</a>
+            <a class="nav-link b" href="/logout">LOG-OUT</a>
           </li>
         </ul>
         <div>
@@ -67,30 +47,28 @@
       </div>
     </div>
   </nav>
-      <center>
+  <center>
     <form action="requestadmin" method="POST">
-      <div class="maincon">
+      <div class="maincont">
         Do you wish to apply for the Admin Status?
-        <button type="submit" class="btn btn-primary">YES</button>
+      {{if .Message.Message}}
+        <button type="submit" class="btn btn-primary" disabled>YES</button>
+
       </div>
+
     </form>
+    <div style="color:red">
+      {{.Message.Message}}
+    </div>
+    {{else}}
+    <button type="submit" class="btn btn-primary">YES</button>
+
+  </div>
+
+</form>
+{{end}}
   </center>
 
-  {{if .Message.Message}}
-  <div
-    class="alert alert-warning alert-dismissible fade show my-3"
-    role="alert"
-  >
-    {{.Message.Message}}
-    <button
-      type="button"
-      class="close"
-      data-dismiss="alert"
-      aria-label="Close"
-    >
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  {{end}}
 </body>
+
 </html>
