--- a/pkg/views/templates/InternalServerError.html
+++ b/pkg/views/templates/InternalServerError.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Server Error</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        p {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-        a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #dc3545;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        a:hover {
-            background-color: #c82333;
-        }
-    </style>
+    <link rel="stylesheet" href="/public/major.css">
 </head>
+
 <body>
     <p>The server couldn't process your request at this particular time. Please try again!</p>
     <a href="javascript:history.back()">GO BACK</a>
 </body>
+
 </html>
