--- a/pkg/views/templates/PageNotFound.html
+++ b/pkg/views/templates/PageNotFound.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
-        }
-        a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
-        a:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="/public/errorpage.css">
 </head>
+
 <body>
     <h1>Page you are looking for does not exist.</h1>
     <a href="javascript:history.back()">GO BACK</a>
 </body>
+
 </html>
