--- a/pkg/views/templates/adminhome.html
+++ b/pkg/views/templates/adminhome.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Document</title>
-    <link rel="stylesheet" href="/public/admin.css">
+    <link rel="stylesheet" href="/public/major.css">
+
 </head>
-<body>
+<body class="mainconbody">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
@@ -23,9 +24,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/addbook">Add</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/deletebook">Delete</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
@@ -44,7 +42,7 @@
         </div>
       </nav>
       <center>
-        <div class="maincon">
+        <div class="mainconadmin">
         <h1>Admin Dashboard</h1>
       </div>
       </center>
