--- a/pkg/views/templates/adminupdate.html
+++ b/pkg/views/templates/adminupdate.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
     defer></script>
-    <script src="/public/checks.js"></script>
+  <script src="/public/checks.js"></script>
   <title>Document</title>
   <link rel="stylesheet" href="/public/major.css">
 </head>
@@ -28,9 +28,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/addbook">Add</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/deletebook">Delete</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
@@ -92,11 +89,12 @@
           <tr>
             <th>Quantity : </th>
             <td class="quantity">
-              <input type="hidden" ng-model="book.Quantity" id="send" name="quantity" value={{.Results.Quantity}} class="form-control"
-               />
+              <input type="hidden" ng-model="book.Quantity" id="send" name="quantity" value={{.Results.Quantity}}
+                class="form-control" />
               <input type="text" ng-model="book.Quantity" id="quant" value={{.Results.Quantity}} class="form-control"
                 disabled />
-              <input type="text" id="quantity" class="form-control" placeholder="Enter the amount of book" ng-model="book.Quantity" />
+              <input type="text" id="quantity" class="form-control" placeholder="Enter the amount of book"
+                ng-model="book.Quantity" />
               <button type="button" class="btn btn-primary" onclick="decrement()">-</button>
               <button type="button" class="btn btn-primary" onclick="increment()">+</button>
             </td>
@@ -107,12 +105,12 @@
       </form>
     </div>
 
-  {{if .Message.Message}}
-  <div style="color:red">
-    {{.Message.Message}}
-  </div>
-  {{end}}
-</center>
+    {{if .Message.Message}}
+    <div style="color:red">
+      {{.Message.Message}}
+    </div>
+    {{end}}
+  </center>
 </body>
 
 </html>
