--- a/pkg/views/templates/grantadmin.html
+++ b/pkg/views/templates/grantadmin.html
@@ -1,81 +1,82 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
-    <link rel="stylesheet" href="/public/major.css">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/listbooks">List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/addbook">Add</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/deletebook">Delete</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/admin/grantadmin">Admin Requests</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li>
-            </ul>
-            <div>
-                <input type="button" class="right" value="Admin" disabled>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <center>
-      <table class="table item table-striped">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Username</th>
-                <th>Action</th>
-            </tr>
-        </thead>
 
-        <tbody>
-            {{range .Results.Users}}
-            <tr ng-repeat="book in books">
-                <td>{{.Userid}}</td>
-                <td>{{.Username}}</td>
-                <td>
-                    <form method="POST" action="/admin/grantadmin">
-                        <input type="hidden" name="userid" value="{{.Userid}}">
-                        <input type="hidden" name="username" value="{{.Username}}">
-                        <button type="submit" class="btn btn-success" name="choice" value="approve">Approve</button>
-                        <button type="submit" class="btn btn-danger" name="choice" value="deny">Deny</button>
-                    </form>
-                </td>
-            </tr>
-            {{end}}
-        </tbody>
-      </table>
-      {{if .Message.Message}}
-      <div style="color:red">
-        {{.Message.Message}}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/major.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/admin/home">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/admin/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/listbooks">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/addbook">Add</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/viewrequest">Book Requests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/admin/grantadmin">Admin Requests</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link b" href="/logout">LOG-OUT</a>
+          </li>
+        </ul>
+        <div>
+          <input type="button" class="right" value="Admin" disabled>
+        </div>
       </div>
-      {{end}}
-    </center>
+    </div>
+  </nav>
+  <center>
+    <table class="table item table-striped">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Username</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {{range .Results.Users}}
+        <tr ng-repeat="book in books">
+          <td>{{.Userid}}</td>
+          <td>{{.Username}}</td>
+          <td>
+            <form method="POST" action="/admin/grantadmin">
+              <input type="hidden" name="userid" value="{{.Userid}}">
+              <input type="hidden" name="username" value="{{.Username}}">
+              <button type="submit" class="btn btn-success" name="choice" value="approve">Approve</button>
+              <button type="submit" class="btn btn-danger" name="choice" value="deny">Deny</button>
+            </form>
+          </td>
+        </tr>
+        {{end}}
+      </tbody>
+    </table>
+    {{if .Message.Message}}
+    <div style="color:red">
+      {{.Message.Message}}
+    </div>
+    {{end}}
+  </center>
 </body>
+
 </html>
