--- a/pkg/views/templates/home.html
+++ b/pkg/views/templates/home.html
@@ -1,66 +1,58 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
-    <style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/major.css">
 
-      body{
-        background-color: #252839;
-      }
-      .maincon{
-        color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      margin-top: 20%;
-      }
-
-    </style>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/user/home">Lib-Manager</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/user/home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/listbooks">List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/returnbook">Return Book</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li>
-            </ul>
-            <div>
-              <input type="button" class="right" value="Client" disabled>
-            </div>
-          </div>
+
+<body class="mainconbody">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/user/home">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/listbooks">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/returnbook">Return Book</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link b" href="/logout">LOG-OUT</a>
+          </li>
+        </ul>
+        <div>
+          <input type="button" class="right" value="Client" disabled>
         </div>
-      </nav>
-      <center>
-        <div class="maincon">
-        <h1>Client Dashboard</h1>
       </div>
-      </center>
+    </div>
+  </nav>
+  <center>
+    <div class="mainconadmin">
+      <h1>Client Dashboard</h1>
+    </div>
+  </center>
 </body>
+
 </html>
