--- a/pkg/views/templates/listbooks.html
+++ b/pkg/views/templates/listbooks.html
@@ -1,72 +1,75 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
-    <link rel="stylesheet" href="/public/major.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/major.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/user/home">Lib-Manager</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/user/home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="/user/listbooks">List</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/returnbook">Return Book</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link b" href="/logout">LOG-OUT</a>
-              </li>
-            </ul>
-            <div>
-              <input type="button" class="right" value="Client" disabled>
-            </div>
-          </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/user/home">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/user/home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="/user/listbooks">List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/reqcheckout">Request for Checkout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/borrowhistory">Borrowing History</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/returnbook">Return Book</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/user/requestadmin">Request for Admin Privileges</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link b" href="/logout">LOG-OUT</a>
+          </li>
+        </ul>
+        <div>
+          <input type="button" class="right" value="Client" disabled>
         </div>
-      </nav>
-    <center>
+      </div>
+    </div>
+  </nav>
+  <center>
     <table class="table item table-striped">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Genre</th>
-                <th>Quantity</th>
-            </tr>
-        </thead>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Genre</th>
+          <th>Quantity</th>
+        </tr>
+      </thead>
       <tbody>
         {{range .Results.Books}}
         <tr ng-repeat="book in books">
-            <td>{{.Title}}</td>
-            <td>{{.Author}}</td>
-            <td>{{.Genre}}</td>
-            <td>{{.Quantity}}</td>
+          <td>{{.Title}}</td>
+          <td>{{.Author}}</td>
+          <td>{{.Genre}}</td>
+          <td>{{.Quantity}}</td>
         </tr>
         {{end}}
-    </tbody>
+      </tbody>
     </table>
-  </center>   
-  
+  </center>
+
 </body>
+
 </html>
-
-
