--- a/pkg/views/templates/register.html
+++ b/pkg/views/templates/register.html
@@ -1,68 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Register</title>
-    <link rel="stylesheet" href="/public/major.css">
-    <script src="/public/checks.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Register</title>
+  <link rel="stylesheet" href="/public/major.css">
+  <script src="/public/checks.js"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Lib-Manager</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-            </ul>
-          </div>
-          <div class="right">
-              <a href="/register"><input type="button" value="Register" class="reg"></a>
-          </div>
-        </div>
-    </nav>
-    <center>
-        <h3>Welcome to Register Page!</h3>
-    </center>
-    <div class="container">
-        <form action="/register" method="POST">
-      
-          <div data-mdb-input-init class="form-outline mb-4">
-            <input id="username" name="username" class="form-control" />
-            <label class="form-label" for="username">Username</label>
-          </div>
-  
-          <div data-mdb-input-init class="form-outline mb-4">
-            <input type="password" id="password" name="password" class="form-control" />
-            <label class="form-label" for="password">Password</label>
-          </div>
-
-          <div data-mdb-input-init class="form-outline mb-4">
-            <input type="password" name="confpassword" id="confpassword" class="form-control" required/>
-            <label class="form-label" for="confpassword">Confirm Password: </label>
-          </div>
-
-          <button data-mdb-ripple-init type="submit" onclick="minPasswordLength()" class="btn btn-primary btn-block mb-4">Register</button>
-        
-        </form>
-
-    </div>
-
-    <center>
-      {{if .Message.Message}}
-      <div style="color:red">
-        {{.Message.Message}}
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Lib-Manager</a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+        </ul>
       </div>
-      {{end}}
-    </center>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js" defer></script>
+      <div class="right">
+        <a href="/register"><input type="button" value="Register" class="reg"></a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="no">
+    <form action="/register" method="POST">
+
+      <div data-mdb-input-init class="form-outline mb-4">
+        <input id="username" name="username" class="form-control" />
+        <label class="form-label" for="username">Username</label>
+      </div>
+
+      <div data-mdb-input-init class="form-outline mb-4">
+        <input type="password" id="password" name="password" class="form-control" />
+        <label class="form-label" for="password">Password</label>
+      </div>
+
+      <div data-mdb-input-init class="form-outline mb-4">
+        <input type="password" name="confpassword" id="confpassword" class="form-control" required />
+        <label class="form-label" for="confpassword">Confirm Password: </label>
+      </div>
+
+      <button data-mdb-ripple-init type="submit" onclick="minPasswordLength()"
+        class="btn btn-primary btn-block mb-4">Register</button>
+
+    </form>
+
+  </div>
+
+  <center>
+    {{if .Message.Message}}
+    <div style="color:red">
+      {{.Message.Message}}
+    </div>
+    {{end}}
+  </center>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js" defer></script>
 </body>
+
 </html>
