--- a/pkg/views/templates/returnbook.html
+++ b/pkg/views/templates/returnbook.html
@@ -1,15 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
-    <title>Document</title>
-    <link rel="stylesheet" href="/public/major.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
+    defer></script>
+  <title>Document</title>
+  <link rel="stylesheet" href="/public/major.css">
 
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
@@ -44,42 +48,43 @@
       </div>
     </div>
   </nav>
-    <center>
+  <center>
     <table class="table item table-striped">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Author</th>
-                <th>Genre</th>
-                <th>Requested On</th>
-                <th>Accepted On</th>
-                <th>Return</th>
-            </tr>
-        </thead>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Author</th>
+          <th>Genre</th>
+          <th>Requested On</th>
+          <th>Accepted On</th>
+          <th>Return</th>
+        </tr>
+      </thead>
       <tbody>
         {{range .Results.BorrowHistory}}
         <tr ng-repeat="book in books">
-            <td>{{.Title}}</td>
-            <td>{{.Author}}</td>
-            <td>{{.Genre}}</td>
-            <td>{{.RequestDate}}</td>
-            <td>{{.AcceptDate}}</td>
-            <td>
-                <form method="POST" action="/user/returnbook">
-                    <input type="hidden" name="bookid" value="{{.BookId}}">
-                    <button type="submit"> Return </button>
-                </form>
-            </td>
+          <td>{{.Title}}</td>
+          <td>{{.Author}}</td>
+          <td>{{.Genre}}</td>
+          <td>{{.RequestDate}}</td>
+          <td>{{.AcceptDate}}</td>
+          <td>
+            <form method="POST" action="/user/returnbook">
+              <input type="hidden" name="bookid" value="{{.BookId}}">
+              <button type="submit" class="btn btn-primary"> Return </button>
+            </form>
+          </td>
         </tr>
         {{end}}
-    </tbody>
-      </table>  
+      </tbody>
+    </table>
 
-        {{if .Message.Message}}
-        <div style="color:red">
-          {{.Message.Message}}
-        </div>
-        {{end}}
-      </center>
+    {{if .Message.Message}}
+    <div style="color:red">
+      {{.Message.Message}}
+    </div>
+    {{end}}
+  </center>
 </body>
+
 </html>
