--- a/public/major.css
+++ b/public/major.css
@@ -1,72 +1,103 @@
-.right{
-    background-color: #444969;
-    border: 1px solid #444969;
-  }
-  .item{
-    width:80%;
-    text-align: center;
-  }
-  .b{
-    margin-left: 0.05in;
-    color: white;
-    background-color: red;
-    border-radius: 0.05in;
-  }
-  .navbar{
-    height: 10vh;
-  }
-  
-
-  .maincont {
-    margin-top: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 25vw;
-    height: max-content;
-    padding: 1.5em;
-    border: 1px solid rgb(0, 0, 0, 0.7);
-    border-radius: 0.1in;
-  }
-
-
-  body{
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+.right {
+  background-color: #444969;
+  border: 0.2rem solid #444969;
 }
-header{
-    display: flex;
-    justify-content: center;
-    font-size: large;
-    margin: 0.5in;
+
+.item {
+  width: 80%;
+  text-align: center;
 }
-.no{
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    margin-top: 2in;
-    padding:0.3in;
-    width: max-content;
-    flex-direction: column;
-    border: rgb(0, 0, 0, 0.8) 1px solid;
-    border-radius:0.1in;  
-}     
+
+.b {
+  margin-left: 0.2rem;
+  color: white;
+  background-color: red;
+  border-radius: 0.2rem;
+}
+
+.navbar {
+  height: 10vh;
+}
+
+
+.maincont {
+  margin-top: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 24vw;
+  height: max-content;
+  padding: 1.2em;
+  border: 0.08rem solid rgb(0, 0, 0, 0.7);
+  border-radius: 0.6rem;
+}
+
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  font-size: large;
+  margin: 0.4rem;
+}
+
+.no {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2in;
+  padding: 0.4in;
+  width: max-content;
+  flex-direction: column;
+  border: rgb(0, 0, 0, 0.8) 0.08rem solid;
+  border-radius: 0.8rem;
+}
 
 
 
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;    
-    margin-top: 2in;
-    padding:0.3in;
-    width: max-content;
-    flex-direction: column;
-    border: rgb(0, 0, 0, 0.8) 1px solid;
-    border-radius:0.1in;  
-}     
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8rem;
+  padding: 0.4rem;
+  width: max-content;
+  flex-direction: column;
+  border: rgb(0, 0, 0, 0.8) 0.08rem solid;
+  border-radius: 0.02rem;
+}
+
+.actioncont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.actioncont form {
+  padding-left: 1rem;
+}
+
+
+
+.mainconbody {
+  background-color: #252839;
+}
+
+.mainconadmin {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20%;
+}
